--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-image-gallery": "^1.4.0",
     "react-modal": "^3.16.3",
     "react-player": "^3.3.1",
     "react-redux": "^9.2.0",
