--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/postcss": "^4.1.11",
     "axios": "^1.11.0",
+    "firebase": "^11.7.1",
     "lucide-react": "^0.541.0",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-image-gallery": "^1.4.0",
     "react-modal": "^3.16.3",
